# TC1033.cpp.as.s3a11.lmccampos

./: Alumno.cpp  Alumno.hpp  CMakeLists.txt  README.md  exercise.cpp  makefile
test/: tests.cpp
